--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -1,21 +1,25 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="senokt16.gmail.com.virtualbusinesscard.views.CardFragment">
 
     <android.support.v7.widget.CardView
         android:layout_margin="8dp"
         android:layout_width="match_parent"
-        android:layout_height="128dp" >
+        android:layout_height="wrap_content"
+        app:cardElevation="8dp">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:padding="8dp">
             <ImageView
                 android:id="@+id/thumbnail"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_centerVertical="true"
+                android:src="@drawable/ic_launcher_background"
                 android:layout_marginBottom="16dp"/>
 
             <TextView
@@ -23,9 +27,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@+id/thumbnail"
-                android:padding="16dp"
+                android:padding="8dp"
                 android:text="Title"
+                android:textColor="#000000"
                 android:textSize="20sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description"
+                android:layout_below="@id/title"
+                android:layout_toEndOf="@+id/thumbnail"
+                android:paddingStart="8dp"
+                android:paddingBottom="8dp"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
