--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -8,8 +8,7 @@
     <android.support.v7.widget.CardView
         android:layout_margin="8dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="8dp">
+        android:layout_height="wrap_content">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -19,8 +18,9 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_centerVertical="true"
-                android:src="@drawable/ic_launcher_background"
-                android:layout_marginBottom="16dp"/>
+                android:src="@drawable/ic_account_circle_black_24dp"
+                android:layout_marginBottom="16dp"
+                android:transitionName="image"/>
 
             <TextView
                 android:id="@+id/title"
@@ -32,6 +32,7 @@
                 android:textColor="#000000"
                 android:textSize="20sp" />
             <TextView
+                android:id="@+id/description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Description"
