--- a/app/src/main/res/layout/fragment_profile_info.xml
+++ b/app/src/main/res/layout/fragment_profile_info.xml
@@ -2,12 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="senokt16.gmail.com.virtualbusinesscard.ProfileInfoFragment">
+    tools:context="senokt16.gmail.com.virtualbusinesscard.views.ProfileInfoFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <Button
+        android:id="@+id/button_link"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left|center_vertical"
+        />
 
 </FrameLayout>
