--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -12,7 +12,9 @@
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:background="@color/colorPrimary"
+        app:elevation="0dp">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -25,7 +27,7 @@
         android:id="@+id/image_wrapper"
         android:layout_width="match_parent"
         android:layout_height="128dp"
-        android:elevation="5dp">
+        android:elevation="9dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
