--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -6,7 +6,10 @@
     tools:context="senokt16.gmail.com.virtualbusinesscard.views.CardFragment">
 
     <android.support.v7.widget.CardView
-        android:layout_margin="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <RelativeLayout
