--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -47,6 +47,8 @@
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_account_circle_black_24dp"
                 android:layout_centerHorizontal="true"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
                 android:transitionName="image"/>
         </RelativeLayout>
     </RelativeLayout>
