--- a/app/src/main/res/menu/menu_profile.xml
+++ b/app/src/main/res/menu/menu_profile.xml
@@ -5,8 +5,7 @@
     <item
         android:id="@+id/action_edit"
         android:orderInCategory="100"
-        android:icon="@drawable/ic_edit_black_24dp"
+        android:icon="@drawable/ic_edit_white_24dp"
         android:title="Edit"
-        app:showAsAction="always"
-        android:iconTint="#fff"/>
+        app:showAsAction="always"/>
 </menu>
