--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,5 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="senokt16.gmail.com.virtualbusinesscard.views.MainActivity">
-
+    <item
+        android:id="@+id/profile_filter"
+        android:orderInCategory="100"
+        android:icon="@drawable/ic_account_circle_white_24dp"
+        android:title="Filter"
+        app:showAsAction="always"/>
+    <item
+        android:id="@+id/new_card"
+        android:orderInCategory="100"
+        android:icon="@drawable/ic_add_circle_white_24dp"
+        android:title="Filter"
+        app:showAsAction="always"/>
 </menu>
