--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/wrapper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccent"
@@ -47,8 +48,8 @@
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_account_circle_black_24dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:transitionName="image"/>
         </RelativeLayout>
     </RelativeLayout>
@@ -60,7 +61,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_keyboard_arrow_up_black_24dp"
+            android:src="@drawable/ic_keyboard_arrow_up_white_24dp"
             android:layout_gravity="bottom|center_horizontal"
             android:layout_marginBottom="32dp"/>
     </FrameLayout>
@@ -69,6 +70,27 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize">
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Michael Hutchingson"
+                android:textSize="26sp"
+                android:textColor="#fff"
+                android:layout_margin="8dp"
+                android:layout_centerVertical="true"/>
+            <ImageView
+                android:id="@+id/name_edit"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_edit_white_24dp"
+                android:layout_toEndOf="@id/name"
+                android:layout_centerVertical="true"
+                android:visibility="gone"/>
+        </RelativeLayout>
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
