--- a/app/src/main/res/layout/fragment_profile_info.xml
+++ b/app/src/main/res/layout/fragment_profile_info.xml
@@ -28,10 +28,13 @@
                 android:layout_height="wrap_content"
                 android:text="Title"
                 android:textColor="#000"/>
-            <TextView
+            <EditText
                 android:id="@+id/description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:background="@android:color/transparent"
+                android:textColor="#808080"
                 android:text="Description"
                 />
         </LinearLayout>
