--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#4779ba</color>
+    <color name="colorPrimaryDark">#4779ba</color>
     <color name="colorAccent">#FF4081</color>
     <color name="QRBlack">#000000</color>
     <color name="QRWhite">#FFFFFF</color>
